# KalmanFilter

./: CMakeLists.txt  Kalman.cpp  Kalman.h  README  README.md  keywords.txt  library.properties
examples/: README.md
examples/Kalman/: Kalman.ino
examples/KalmanExample/: KalmanExample.ino
examples/MPU6050/: I2C.ino  Kalman.h  MPU6050.ino  README.md
examples/MPU6050/Graph/: Convert.pde  DrawAxis.pde  Graph.pde  README.md
examples/MPU6050/Graph/application.linux32/: Graph
examples/MPU6050/Graph/application.linux32/source/: Convert.pde
examples/MPU6050/Graph/application.linux64/: Graph
examples/MPU6050/Graph/application.linux64/source/: Graph.pde
examples/MPU6050/Graph/application.macosx/Graph.app/Contents/: Info.plist
examples/MPU6050/Graph/application.macosx/source/: Graph.java
examples/MPU6050/Graph/application.windows32/lib/: args.txt
